--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="item">Item</string>
     <string name="not_in_shift">לא במשמרת</string>
     <string name="slick_long_for_enter">לחיצה ארוכה לכניסה</string>
-    <string name="time_format">%1s:%2s:%3s</string>
+    <string name="time_format">%s:%s:%s</string>
     <string name="entry_time">שעת כניסה: %1s</string>
     <string name="suggest_improvements">הצעות לשיפורים</string>
     <string name="share_this_app">שתפו את אחראי משמרת</string>
@@ -17,6 +17,7 @@
     <string name="exit">יציאה</string>
     <string name="rate">תעריף</string>
     <string name="total_payment">%s ₪</string>
+    <string name="payment_cycle">%d עד %d לחודש הבא </string>
     <string name="total_time">%s דקות</string>
     <string name="rate_percent">%d\%%</string>
     <string name="edit">ערוך</string>
@@ -25,4 +26,17 @@
     <string name="cancel">ביטול</string>
     <string name="bonus">בונוס</string>
     <string name="add_your_note">Add your note</string>
+    <string name="hourly_payment">שכר שעתי</string>
+    <string name="additional_hours">שעות נוספות</string>
+    <string name="travel_expense">החזר נסיעות</string>
+    <string name="breaks">הפסקות</string>
+    <string name="calculation_period">תקופת חישוב</string>
+    <string name="rate_per_day">תעריף ליום</string>
+    <string name="notify_arrival">בהגעה לעבודה</string>
+    <string name="notify_exit">בעזיבת העבודה</string>
+    <string name="notify_end_of_shift">בסיום משמרת</string>
+    <string name="calculate">חשב</string>
+    <string name="dont_calculate">לא לחשב</string>
+    <string name="salary">שכר</string>
+    <string name="reminders">תזכורות</string>
 </resources>
